Build future blogs

--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ enableInlineShortcodes = true
 enableRobotsTXT = true
 canonifyURLs = true
 buildDrafts = false
-buildFuture = false
+buildFuture = true
 buildExpired = false
 enableEmoji = true
 pygmentsUseClasses = true
